# shredos.x86_64

./: README.md
.github/workflows/: build.yml
board/shredos/: grub.cfg
board/shredos/fsoverlay/etc/: inittab
board/shredos/fsoverlay/etc/shredos/: version.txt
board/shredos/fsoverlay/etc/shredos-vault/: vault.conf
board/shredos/iso/: grub.cfg  isolinux.cfg
configs/: shredos_defconfig
package/: Config.in
package/libfprint/: Config.in  libfprint.mk
package/pocketsphinx/: Config.in  pocketsphinx.mk
package/shredos-vault/: Config.in  README.md  USAGE.md  WIPE_ENGINE.md  shredos-vault.mk
package/shredos-vault/src/: COPYING  Makefile.am  auth.c  auth.h  auth_fingerprint.c  auth_fingerprint.h  auth_password.c  auth_password.h  auth_voice.c  auth_voice.h  autogen.sh  config.c  config.h  configure.ac  deadman.c  deadman.h  installer.c  installer.h  luks.c  luks.h  main.c  platform.c  platform.h  tui.h  tui_ncurses.c  tui_vt100.c  tui_win32.c  wipe.c  wipe.h
package/shredos-vault/src/macos/: Makefile  secure_wipe.c  secure_wipe.h
package/shredos-vault/src/vault-gate/: Makefile  shredos-vault  vault-gate.conf
package/shredos-vault/src/vault-gate/linux/: initramfs-hook.sh  initramfs-script.sh  install.sh  uninstall.sh
package/shredos-vault/src/vault-gate/linux/dracut-module/: module-setup.sh  vault-gate-hook.sh  vault-gate.service
package/shredos-vault/src/vault-gate/macos/: com.shredos.vault-gate.plist  install.sh  uninstall.sh
package/shredos-vault/src/vault-gate/windows/: VaultGateProvider.cpp  VaultGateProvider.h  install.bat  uninstall.bat  vault-gate-service.c
